Sun Nov 28 18:15:40 1999  Bjoern Groenvall  <bg@bg.sics.se>

	* cipher.c (cipher_set_key): Integrate new experimental
 	BF_iapcbc_encrypt cipher.
	
	* blowfish.h (BF_LONG): Define as 32 bit quantity even on 64 bit
 	machines.

	* bf_enc.c (BF_iapcbc_encrypt): New integrity aware encryption
 	mode.

Thu Nov 11 14:03:30 1999  Bjoern Groenvall  <bg@sics.se>

	* bf_enc.c cipher.{c,h}: Add experimental Blowfish PCBC cipher.

	* sshd.c (do_connection): Check length of session key.

	* rsaglue.c (rsa_public_encrypt): Prevent buffer overflow that can
 	happen if you use RSAREF.

Sun Nov  7 15:29:32 1999  Bjoern Groenvall  <bg@bg.sics.se>

	* auth-passwd.c (auth_password): Move password authentication
 	using krb4 to auth-krb4.c (auth_krb4_pass).

	* rsa.c (rsa_generate_key): Check that the generated RSA key does
 	really have the desired modulus.
	
	* hostfile.c (auth_rsa_read_key): Derive bits from n rather than
	using redundant field bits.
 
	* sshconnect.c (ssh_login): Key fingerprint support.

	* auth-krb4.c (ssh_tf_init): Constness.

Sun Nov  7 10:22:14 1999  Bjoern Groenvall  <bg@sics.se>

	* sshconnect.c (ssh_login): Don't trust server announcement
 	regarding the number of bits in keys. From Niels and Markus.

Thu Nov  4 11:19:19 1999  Bjoern Groenvall  <bg@sics.se>

	* sshd.c (do_authentication): Don't send fail-msg but disconnect
 	if too many authentication failures, from OpenBSD.

Sun Oct 31 10:26:01 1999  Bjoern Groenvall  <bg@sics.se>

	* rsa.h: typedef BIGNUM.

	* ssh.c (main): If we are setuid, initialize kerberos before uid
 	swap.

	* uidswap.c (permanently_set_uid): Use setresuid(uid, uid, -1) so
 	that the saved-user-ID is not replaced.

	* channels.c (channel_after_select): Merge in changes from OpenBSD
 	done by Markus Friedl.

	* configure.in packet.c acconfig.h authfile.c cipher.h cipher.c
 	(cipher_set_key): Remove optional support for IDEA, RC4 and
 	(single) DES.

Fri Oct 29 17:05:30 1999  Bjoern Groenvall  <bg@mummel.sics.se>
